tests/idris2/error/perror028/expected
1/1: Building LetInDo (LetInDo.idr)
Error: Let-in not supported in do block. Did you mean (let ... in ...)?.

LetInDo:6:13--6:15
 2 | 
 3 | letInDo : Monad m => m Int
 4 | letInDo = do
 5 |   y <- pure 10
 6 |   let x = 5 in pure $ y + x
                 ^^

